[gd_scene load_steps=27 format=3 uid="uid://dpf8gth4sk20u"]

[ext_resource type="Script" path="res://scripts/slime_mini.gd" id="1_8vjy3"]
[ext_resource type="Texture2D" uid="uid://bkb1tg65h6lya" path="res://assets/SGQ_Enemies_v1_0_0/SGQ_Enemies/normal/16x16/slime.png" id="1_nkhfp"]
[ext_resource type="Texture2D" uid="uid://dok6qt0bnr4dr" path="res://assets/SGQ_Enemies_v1_0_0/SGQ_Enemies/normal/16x32/cube_slime.png" id="3_vmdqa"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4faxx"]
atlas = ExtResource("1_nkhfp")
region = Rect2(0, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwshp"]
atlas = ExtResource("1_nkhfp")
region = Rect2(16, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_acvw6"]
atlas = ExtResource("1_nkhfp")
region = Rect2(32, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mllgo"]
atlas = ExtResource("1_nkhfp")
region = Rect2(48, 64, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uypke"]
atlas = ExtResource("1_nkhfp")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_byedi"]
atlas = ExtResource("1_nkhfp")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lur0s"]
atlas = ExtResource("1_nkhfp")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rd4ta"]
atlas = ExtResource("1_nkhfp")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4t76g"]
atlas = ExtResource("1_nkhfp")
region = Rect2(32, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_5uot1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4faxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwshp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acvw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mllgo")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uypke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_byedi")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lur0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rd4ta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4t76g")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_85rys"]
atlas = ExtResource("3_vmdqa")
region = Rect2(0, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gnn6"]
atlas = ExtResource("3_vmdqa")
region = Rect2(16, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jb01b"]
atlas = ExtResource("3_vmdqa")
region = Rect2(32, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fuple"]
atlas = ExtResource("3_vmdqa")
region = Rect2(48, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k6h86"]
atlas = ExtResource("3_vmdqa")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a10dq"]
atlas = ExtResource("3_vmdqa")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbdjq"]
atlas = ExtResource("3_vmdqa")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u13ch"]
atlas = ExtResource("3_vmdqa")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_htbdt"]
atlas = ExtResource("3_vmdqa")
region = Rect2(0, 64, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_x8ola"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85rys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gnn6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jb01b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fuple")
}],
"loop": false,
"name": &"Death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k6h86")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a10dq")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbdjq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u13ch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_htbdt")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_i51od"]
radius = 23.0868

[sub_resource type="CircleShape2D" id="CircleShape2D_jp3ev"]
radius = 1200.0

[sub_resource type="CircleShape2D" id="CircleShape2D_l0wap"]
radius = 31.1448

[node name="slime_mini" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_8vjy3")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_5uot1")
animation = &"Death"

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -25)
scale = Vector2(3.5, 3.5)
sprite_frames = SubResource("SpriteFrames_x8ola")
animation = &"Jump"
frame = 2
frame_progress = 0.0758976

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_i51od")

[node name="detection_ms" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_ms"]
position = Vector2(1, 0)
shape = SubResource("CircleShape2D_jp3ev")

[node name="hitbox_ms" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_ms"]
shape = SubResource("CircleShape2D_l0wap")

[connection signal="body_entered" from="detection_ms" to="." method="_on_detection_ms_body_entered"]
[connection signal="body_exited" from="detection_ms" to="." method="_on_detection_ms_body_exited"]
[connection signal="area_entered" from="hitbox_ms" to="." method="_on_hitbox_ms_area_entered"]
